<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:padding="50dp"
        android:textSize="50sp"
        android:textColor="#000000"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:background="#ffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center" >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jugar"
            android:textSize="20sp"
            android:onClick="irAJugar"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explicacion"
            android:textSize="20sp"
            android:onClick="mostrarExplicacion"/>
    </LinearLayout>
</LinearLayout>
